--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@v2
+        uses: nwtgck/actions-netlify@v2
         with:
           args: deploy --prod --dir=dist
         env:
